@startuml

class Casa {
    - String direccion
    - ArrayList<Habitacion> habitaciones
    - Propietario propietario
    + Casa(String direccion)
    + Propietario getPropietario()
    + void setPropietario()
    + void agregarHabitacion(String nombre, double metros)
    + Habitacion mostrarHabitaciones()
    + Habitacion getHabitacionMasGrande()
    + void eliminarHabitacion(String nombre)
    + double habitacionMasConsumo()
    + String toString()
}

class Habitacion {
    - String nombre
    - double metrosCuadrados
    - ArrayList<Electrodomestico> electrodomesticos
    + Habitacion(String nombre, double metrosCuadrados)
    + String getNombre()
    + double getMetrosCuadrados()
    + void setMetrosCuadrados(double metrosCuadrados)
    + ArrayList<Electrodomestico> getElectrodomesticos()
    + void agregarElectrodomestico(Electrodomestico electrodomestico)
    + void mostrarElectrodomesticos()
    + double calularConsumo()
    + String toString()
}

class Electrodomestico {
    - String nombre
    - double consumo
    + Electrodomestico(String nombre, double consumo)
    + String getNombre()
    + double getConsumo()
    + void setConsumo(double consumo)
    + String toString()
}

class Propietario {
    - String nombre
    - int edad
    + Propietario(String nombre, int edad)
    + int getEdad()
    + void setEdad(int edad)
    + String getNombre()
    + void setNombre(String nombre)
    + String toString()
}

Casa --> Habitacion
Casa --> Propietario
Habitacion --> Electrodomestico

@enduml